markup for pages except loader, bookingForm and filters, redux for carsSlice

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,6 +1,5 @@
 @import './variables.css';
 
-
 h1,
 h2,
 h3,
@@ -51,11 +50,26 @@ body {
 }
 
 .container {
-  max-width: 1440px;
+  min-width: 320px;
+  max-width: 320px;
   margin: 0 auto;
-  padding: 0 120px;
+  padding: 0 22px;
 }
 
 .page {
   margin-top: 68px;
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+    padding: 0 40px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .container {
+    max-width: 1440px;
+    padding: 0 120px;
+  }
 }
