add filters, redux for filters, styles for filters

--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -40,7 +40,7 @@
   font-size: 16px;
   line-height: 125%;
   transition: background-color 250ms linear;
-  &:hover {
+  &:hover, :focus {
     background-color: var(--button-hover);
   }
 }
