--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -42,6 +42,22 @@ button {
   line-height: 1;
 }
 
+select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="number"] {
+  -moz-appearance: textfield;
+}
+
 body {
   min-width: 320px;
   background-color: var(--white);
