--- a/src/components/CarsListItem/CarsListItem.module.css
+++ b/src/components/CarsListItem/CarsListItem.module.css
@@ -1,6 +1,7 @@
 .card {
   width: 100%;
   height: 424px;
+  position: relative;
 }
 
 @media screen and (min-width: 768px) {
@@ -122,4 +123,24 @@
   line-height: 125%;
   color: var(--white);
   background-color: var(--button);
+  transition: background-color 250ms linear;
+}
+
+.detailsLink:hover,
+.detailsLink:focus {
+  background-color: var(--button-hover);
+}
+
+.btn {
+  position: absolute;
+  top: 16px;
+  right: 16px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: transparent;
+}
+
+.heartIcon {
+  fill: var(--white);
 }
