--- a/src/components/CarsList/CarsList.module.css
+++ b/src/components/CarsList/CarsList.module.css
@@ -5,3 +5,11 @@
   margin-bottom: 80px;
 }
 
+.errorText {
+  text-align: center;
+  color: rgb(136, 19, 19);
+  font-size: 18px;
+  @media screen and (min-width: 768px) {
+    font-size: 26px;
+  }
+}
