--- a/src/components/Filters/Filters.module.css
+++ b/src/components/Filters/Filters.module.css
@@ -1,8 +1,8 @@
 .form {
   display: flex;
-  gap: 16px;
-  align-items: flex-end;
-  justify-content: center;
+  gap: 10px;
+  flex-direction: column;
+  width: 100%;
 }
 
 .label {
@@ -11,59 +11,60 @@
   gap: 8px;
   min-width: 204px;
   font-weight: 400;
-  font-size: 12px;
+  font-size: 14px;
   line-height: 133%;
   color: var(--gray);
 }
 
 .inputWrapper {
   display: flex;
-  width: 320px;
+  width: 100%;
   height: 44px;
   position: relative;
 }
 
 .input {
   border: none;
-  width: 160px;
+  width: 138px;
   height: 44px;
   background: var(--inputs);
   outline: transparent;
   font-weight: 500;
-  font-size: 16px;
+  font-size: 14px;
   line-height: 125%;
 }
 
 .left {
-  padding: 12px 24px 12px 66px;
+  padding: 14px 24px 14px 54px;
   border-radius: 12px 0 0 12px;
   border-right: 1px solid var(--gray-light);
 }
 
 .right {
-  padding: 12px 24px 12px 48px;
+  padding: 14px 24px 14px 30px;
   border-radius: 0 12px 12px 0;
 }
 
 .inputText {
   position: absolute;
   font-weight: 500;
-  font-size: 16px;
+  font-size: 12px;
   line-height: 125%;
   color: var(--main);
+   top: 50%;
+  transform: translateY(-50%);
 }
 
 .leftText {
-  top: 12px;
-  left: 24px;
+  left: 18px;
 }
 
 .rightText {
-  top: 12px;
-  right: 118px;
+  right: 112px;
 }
 
 .btn {
+  margin-top: 10px;
   font-weight: 600;
   font-size: 16px;
   line-height: 125%;
@@ -72,7 +73,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 156px;
+  width: 100%;
   height: 44px;
   background-color: var(--button);
   transition: background-color 250ms linear;
@@ -80,5 +81,49 @@
 
 .btn:hover,
 .btn:focus {
-    background-color: var(--button-hover);
+  background-color: var(--button-hover);
+}
+
+@media screen and (min-width: 768px) {
+  .form {
+    flex-direction: row;
+    gap: 16px;
+    flex-wrap: wrap;
+    align-items: flex-end;
+    justify-content: center;
+  }
+
+  .inputWrapper {
+    width: 320px;
+  }
+
+  .input {
+    width: 160px;
+    font-size: 16px;
+  }
+
+  .left {
+    padding: 12px 24px 12px 66px;
+  }
+
+  .right {
+    padding: 12px 24px 12px 48px;
+  }
+
+  .inputText {
+    font-size: 16px;
+  }
+
+  .leftText {
+    left: 24px;
+  }
+
+  .rightText {
+    right: 118px;
+  }
+
+  .btn {
+    margin-top: 0;
+    width: 156px;
+  }
 }
