--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -18,14 +18,14 @@
 }
 
 .title {
-  font-size: 60px;
+  font-size: 30px;
   line-height: 120%;
   margin-bottom: 16px;
 }
 
 .text {
   font-weight: 600;
-  font-size: 24px;
+  font-size: 20px;
   line-height: 133%;
   margin-bottom: 40px;
 }
@@ -40,7 +40,20 @@
   font-size: 16px;
   line-height: 125%;
   transition: background-color 250ms linear;
-  &:hover, :focus {
+  &:hover,
+  :focus {
     background-color: var(--button-hover);
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .title {
+    font-size: 40px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .title {
+    font-size: 60px;
   }
 }
