mobile styles for calendar

--- a/src/components/CustomCalendar/CustomCalendar.css
+++ b/src/components/CustomCalendar/CustomCalendar.css
@@ -2,8 +2,8 @@
   border: none;
   width: 100%;
   background-color: transparent;
+  outline: transparent;
 }
-
 
 .react-datepicker__tab-loop .myCalendar {
   border: 1px solid var(--button);
@@ -37,12 +37,17 @@
 
 .react-datepicker__tab-loop .myCalendar .react-datepicker {
   border-radius: 12px;
+  border: none;
 }
 
 .react-datepicker__tab-loop .myCalendar .react-datepicker__triangle {
-  stroke: blue;
+  /* display: none; */
+  stroke: var(--button);
 }
 
+.react-datepicker__tab-loop .myCalendar .react-datepicker__triangle::before {
+  content: '';
+}
 .react-datepicker__tab-loop .myCalendar .react-datepicker__month {
   display: flex;
   flex-direction: column;
@@ -91,7 +96,7 @@
   font-size: 14px;
   line-height: 120%;
   text-align: center;
-  width: 36px;
+  width: 32px;
   height: 32px;
   display: flex;
   align-items: center;
@@ -99,7 +104,7 @@
   border-radius: 32px;
 }
 
-.react-datepicker__tab-loop .myCalendar .react-datepicker__day--selected{
+.react-datepicker__tab-loop .myCalendar .react-datepicker__day--selected {
   border-radius: 32px;
   background: var(--button);
   color: var(--inputs);
@@ -107,4 +112,10 @@
 
 .react-datepicker__tab-loop .myCalendar .react-datepicker__day--outside-month {
   color: var(--gray);
+}
+
+@media screen and (min-width: 768px) {
+  .react-datepicker__tab-loop .myCalendar .react-datepicker__day {
+    width: 36px;
+  }
 }
